--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,2 +1,3 @@
 spring.redis.cluster.nodes=192.168.5.165:7000,192.168.5.165:7001,192.168.5.165:7002,192.168.5.165:7003,192.168.5.165:7004,192.168.5.165:7005
 spring.redis.lettuce.pool.max-active=8
+spring.redis.lettuce.pool.min-idle=4
